--- a/aula2_ads2ma.ipynb
+++ b/aula2_ads2ma.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyMc9tsomCId7d2CEYA5t7x+",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,21 +17,31 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Evandroj07/estudos/blob/main/aula2_ads2ma.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KBQr_e56dr93",
-        "outputId": "1809c64d-b877-4687-ae30-ba3a297b46f5"
+        "outputId": "b6e7e975-3906-4a35-bf49-80250a0eb3b2"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<class 'bool'>\n"
+            "<class 'str'>\n"
           ]
         }
       ],
@@ -41,8 +53,8 @@
         "\n",
         "#print('Olá Mundo')\n",
         "\n",
-        "e = False\n",
-        "print(type(e))"
+        "E = 'Dado'\n",
+        "print(type(E))"
       ]
     }
   ]
